# QuantizedDatabase

./: CMakeLists.txt  main.cpp
header/: data_read.h  database.h  feature_extract.h  knn.h
python/: load_data.c  load_data.py  test.py
src/database/: database.cpp  knn.cpp
